# rtt-gazebo-ur5-integration

./: .gitignore  CMakeLists.txt  README.md  angles.csv  sens_pos2.txt  sens_test.txt  ur5_rtt_gazebo_component_working.cpp
elmmodel/data/: Ay.mat  Win.mat  Wout.mat  a.vec  b.vec  bx.vec  by.vec
learning_folder/armlearn/: TwoDOFManipulator.m  learnIkin.m
learning_folder/cpp_learner/elm_example/: AdaptiveLinearMapping.cpp  AdaptiveMapping.cpp  CMakeLists.txt  ExtremeLearningMachine.cpp  ExtremeLearningMachine.h  TimeSeries.h  main.cpp
learning_folder/elmmodel/data/: Ay.mat  Win.mat  Wout.mat  b.vec  by.vec
learning_folder/elmmodel_mass_0/data/: Ax.mat  Ay.mat  Win.mat  Wout.mat  b.vec  by.vec
learning_folder/elmmodel_mass_1/data/: Ax.mat  Ay.mat  Win.mat  Wout.mat  b.vec  by.vec
learning_folder/elmmodel_mass_3/data/: Ax.mat  Ay.mat  Win.mat  Wout.mat  b.vec  bx.vec  by.vec
learning_folder/elmmodel_mass_5/data/: Ax.mat  Ay.mat  Win.mat  Wout.mat  b.vec  bx.vec  by.vec
learning_folder/learner/algorithms/: ELM.m  Learner.m
learning_folder/learner/metric/: Metric.m  mexSqEucDistance.cpp  mexSqEucDistance.mexa64  mexWeightedSqEucDistance.mexa64  mexWeightedSqEucDistance.mexa64_
learning_folder/learner/utils/: blendLASA.m  clip.m  cr2tr.m  ctrlgui.m  dcm2angles.m  dcm2euler.m  euler2dcm.m  func_FromPolarCoords2CartesianCoords.m  funclocal_Matrix2TXT.m  lor2cor.m  morphLASA.m  morphTrajectory.m  morphTrajectory2.m  norm2range.m  normalize.m  plotMotionMap.m  print_img.m  rad2deg.m  randInRange.m  randu.m  range2norm.m  resample.m  rotateLASA.m  space2time.m  time2space.m  tr2cr.m
learning_folder/ur5_learner/: SixDOFManipulator.m  comparison_learner.m  cppModelWrite.m  elm_results.fig  elm_results_bip0_fw20.fig  elm_results_bip0_fw20_multiple_figures.fig  elm_results_bip1_fw20.fig  learnIkin.m  learn_mass.m  learn_mass_pred.m  learner_on_learner.m  learner_on_learner_pred.m  plotData.m  readData.m  readData_mass.m  torque_3angles.fig  torque_angles.fig  torque_angles_0mass.fig  torque_angles_1mass.fig  torque_values.fig  var_plot_example.m
learning_folder/ur5_learner/AELM/: include_paths.m
learning_folder/ur5_learner/comparison/: big_compariosn.fig  compar_normal.fig  compar_var.fig  extrapolation_error.fig  stability_extrapolation.fig  stability_test.fig  test_comparison.fig  test_error.fig
learning_folder/ur5_learner/data_fixedpos/: elm_results.fig  torque_3angles.fig  torque_angles.fig
learning_folder/ur5_learner/data_random_pos/: torque_3angles.fig  torque_angles.fig
learning_folder/ur5_learner/learn_mass/: elm_results.fig  nb_data_err.fig  nb_data_err_var.fig  nb_data_extrapol.fig  nb_data_extrapol_var.fig  nb_input_error.fig  nb_input_error_extrapol.fig  nb_input_error_extrapol_2.fig  nb_input_final.fig
learning_folder/ur5_learner/learner_on_learner/: elm_results_correct_not_precise.fig  elm_results_errors.fig  elm_results_new.fig  (+8 more)
models/elmmodel_mass_5/: info
recorded_data/: test_data_mass3
scripts/: ur5.ops
src/: AdaptiveLinearMapping.h  AdaptiveMapping.h  DataCollector.cpp  DataCollector.hpp  ELMComponent.cpp  ELMComponent.hpp  Mapping.cpp  Mapping.h  RealMatrix.cpp  RealMatrix.h  RealVector.cpp  RealVector.h  TimeSeries.cpp  VectorMath.h  pid_component.cpp  pid_component.hpp  ur5_rtt_gazebo_component.cpp  ur5_rtt_gazebo_component.hpp  ur5_rtt_gazebo_component_not_working.cpp
(+206 files in other folders)
